--- a/src/css/style.css
+++ b/src/css/style.css
@@ -11,7 +11,7 @@ span,
 input,
 select,
 textarea {
-  font-family: "Noto Sans TC", sans-serif
+  font-family: "Noto Sans TC", sans-serif;
 }
 
 html {
